--- a/index.html
+++ b/index.html
@@ -6,6 +6,8 @@
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <title>The witcher</title>
     <link href="https://fonts.googleapis.com/css?family=Roboto:400,700&display=swap&subset=cyrillic" rel="stylesheet">
+    <link rel="stylesheet" href="css/reset.css">
+    <link rel="stylesheet" href="css/swiper.min.css">
     <link rel="stylesheet" href="css/style.css">
 </head>
 <body>
@@ -64,12 +66,60 @@
                 <button class="play"><img class="play-image" src="img/play.svg" alt="play" srcset=""></button>
             </div>
             <!-- /.main-content -->
+
+           <div class="series">
+                <div class="swiper-container">
+                    <div class="swiper-wrapper series">
+                        <div class="swiper-slide">
+                            <div class="card series-1">
+                                <span class="card-subtitle">Серия #1</span>
+                                <h2 class="card-title">Начало конца</h2>
+                            </div>
+                        </div>
+                        <div class="swiper-slide">
+                            <div class="card series-2">
+                                <span class="card-subtitle">Серия #2</span>
+                                <h2 class="card-title">Четыре знака</h2>
+                            </div>
+                        </div>
+                        <div class="swiper-slide">
+                            <div class="card series-2">
+                                <span class="card-subtitle">Серия #3</span>
+                                <h2 class="card-title">Четыре знака</h2>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+                <button class="arrow"></button>
+            </div>
+            <!-- /.series -->
         </div>
         <!-- /.container -->
     </main>
 
     <footer class="footer">
-
+        <div class="container">
+            <div class="footer-content">
+                <div class="left">
+                    <span class="copyright">© 2020 The Witcher. All right reserved.</span>
+                </div>
+                <!-- /.left -->
+                <div class="right">
+                    <nav class="footer-menu">
+                        <a href="#" class="footer-link">Privacy Policy</a>
+                        <a href="#" class="footer-link">Terms of Service</a>
+                        <a href="#" class="footer-link">Legal</a>
+                    </nav>
+                    <!-- /.footer-menu -->
+                </div>
+                <!-- /.right -->
+            </div>
+            <!-- /.footer-content -->
+        </div>
+        <!-- /.container -->
     </footer>
+
+    <script src="js/swiper.min.js"></script>
+    <script src="js/script.js"></script>
 </body>
 </html>
