--- a/index.html
+++ b/index.html
@@ -29,6 +29,8 @@
                 </div>
             </div>
             <!-- /.header -->
+
+            <div class="menu-button"></div>
         </div>
         <!-- /.container -->
     </header>
