--- a/index.html
+++ b/index.html
@@ -8,6 +8,7 @@
     <link href="https://fonts.googleapis.com/css?family=Roboto:400,700&display=swap&subset=cyrillic" rel="stylesheet">
     <link rel="stylesheet" href="css/reset.css">
     <link rel="stylesheet" href="css/swiper.min.css">
+    <link rel="stylesheet" href="css/jquery.fancybox.min.css">
     <link rel="stylesheet" href="css/style.css">
 </head>
 <body>
@@ -62,10 +63,10 @@
                         Ведьмак Геральт, мутант и убийца чудовищ, на своей верной лошади по кличке Плотва путешествует по Континенту. За тугой мешочек чеканных монет этот мужчина избавит вас от всякой настырной нечисти — хоть от чудищ болотных, оборотней и даже заколдованных принцесс. 
                     </p>
 
-                    <button class="button">Смотреть онлайн</button>
+                    <a data-fancybox href="https://www.youtube.com/watch?v=Bw6XSzDTeTU" class="button">Смотреть трейлер</a>
                 </div>
 
-                <button class="play"><img class="play-image" src="img/play.svg" alt="play" srcset=""></button>
+                <a data-fancybox href="https://www.youtube.com/watch?v=Bw6XSzDTeTU" class="play"><img class="play-image" src="img/play.svg" alt="play" srcset=""></a>
             </div>
             <!-- /.main-content -->
 
@@ -121,6 +122,8 @@
         <!-- /.container -->
     </footer>
 
+    <script src="https://cdn.jsdelivr.net/npm/jquery@3.4.1/dist/jquery.min.js"></script>
+    <script src="js/jquery.fancybox.min.js"></script>
     <script src="js/swiper.min.js"></script>
     <script src="js/script.js"></script>
 </body>
